--- a/index.html
+++ b/index.html
@@ -360,9 +360,13 @@
                           <p class="description">stack<strong>overflow</strong></p>
                       </div>
                       <div class="skill">
-                          <img src="./skill-images/bootstap.png" alt="CSS">
-                          <p class="description">Bootstrap</p>
-                      </div>
+                        <img src="./skill-images/react.png" alt="React">
+                        <p class="description">React</p>
+                    </div>
+                    <div class="skill">
+                        <img src="./skill-images/figma.png" alt="Figma">
+                        <p class="description">Figma</p>
+                    </div>
                     </div>
                   </div>
               </div>
