--- a/index.html
+++ b/index.html
@@ -343,39 +343,39 @@
                 
                       <div class="horizontal-scroller snaps-inline" id="scroll-horizontally">
                           <div class="skill">
-                              <img src="./skill-images/html.png" alt="HTML">
+                              <img src="./skill-images/html.png" loading="lazy" alt="HTML">
                               <p class="description">HTML</p>
                           </div>
                           <div class="skill">
-                              <img src="./skill-images/css.png" alt="CSS">
+                              <img src="./skill-images/css.png" loading="lazy" alt="CSS">
                               <p class="description">CSS</p>
                           </div>
                           <div class="skill">
-                            <img src="./skill-images/js.png" alt="JS">
+                            <img src="./skill-images/js.png" loading="lazy" alt="JS">
                             <p class="description">JavaScript</p>
                         </div>
                         <div class="skill">
-                            <img src="./skill-images/davinci.png" alt="davinci resolve">
+                            <img src="./skill-images/davinci.png" loading="lazy" alt="davinci resolve">
                             <p class="description">DaVinci Resolve</p>
                         </div>
                         <div class="skill">
-                            <img src="./skill-images/photoshop.png" alt="Photoshop">
+                            <img src="./skill-images/photoshop.png" loading="lazy" alt="Photoshop">
                             <p class="description">Photoshop</p>
                         </div>
                         <div class="skill">
-                            <img src="./skill-images/sass.png" alt="SCSS">
+                            <img src="./skill-images/sass.png" loading="lazy" alt="SCSS">
                             <p class="description">SCSS</p>
                         </div>
                         <div class="skill">
-                            <img src="./skill-images/stack-overflow.png" alt="stackoverflow">
+                            <img src="./skill-images/stack-overflow.png" loading="lazy" alt="stackoverflow">
                             <p class="description">stack<strong>overflow</strong></p>
                         </div>
                         <div class="skill">
-                          <img src="./skill-images/react.png" alt="React">
+                          <img src="./skill-images/react.png" loading="lazy" alt="React">
                           <p class="description">React</p>
                       </div>
                       <div class="skill">
-                          <img src="./skill-images/figma.png" alt="Figma">
+                          <img src="./skill-images/figma.png" loading="lazy" alt="Figma">
                           <p class="description">Figma</p>
                       </div>
                       </div>
