added email validation info

--- a/index.html
+++ b/index.html
@@ -411,6 +411,32 @@
                         <label for="email">Email: </label>
                         <input type="email" name="email" id="email">
                         <small class="error-message"></small>
+                        <div class="info" id="more-info">i</div>
+
+                        <div class="info-modal">
+                            <div class="info-modal_header">
+                                <h2>Email Info</h2>
+                                <div class="info-modal_close-btn">
+                                    <div class="close-btn_line-one"></div>
+                                    <div class="close-btn_line-two"></div>
+                                </div>
+                            </div>
+                            <div class="info-modal_content">
+                                <h3>Your Email Should Contain:</h3>
+                                <ul>
+                                    <li>Prefix on left side of @ symbol</li>
+                                    <li>Domain name on right side of @ symbol</li>
+                                </ul>
+                                
+                                <h3>Some examples of valid Email Adresses:</h3>
+                                <ul>
+                                    <li>email@example.com</li>
+                                    <li>firstname.lastname@example.com</li>
+                                    <li>email@subdomain.example.com</li>
+                                    <li>1234567890@example.com</li>
+                                </ul>
+                            </div>
+                        </div>
                         
                         <label for="subject">Subject: </label>
                         <input type="text" name="subject" id="subject">
@@ -467,7 +493,8 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p> Copyright © 2022 All Rights Reserved</p>
+        <!-- <p> Copyright © 2022 All Rights Reserved</p> -->
+        <p> Created by Paweł Czarnecki</p>
       </div> 
   </div>
       <!-- <div class="home" id="about">
