--- a/index.html
+++ b/index.html
@@ -325,9 +325,7 @@
         <div class="slide-in">
           <div class="slide">
               <h1>About Me</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique hic ipsum dolor amet corrupti tenetur, adipisci doero inventore fugit quibusdam dolores. Accusamus hic et fugit recusandae, ratione temporibus.</p>
-              <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sestiae nobis.</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ab possimus voluptatum asperiores, illum molliloretempora aut. Quam vitae modi numquam exercitationem error magni est aliquid! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste velit aliquam nemo odio non totam rem porro aspernatur praesentium minima ipsum, voluptatum commodi eius dolore.</p> 
+            <p>Coming Soon ...</p>
           </div>
       </div>
       </div>
@@ -389,9 +387,9 @@
       <div class="section" id="work">
         <div class="slide-in">
           <div class="slide">
-              <h1>My Work</h1>       
+              <h1>My Work</h1>   
+              Coming soon ...    
               <h2>Recent Work</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ab possimus voluptatum asperiores, illum molliloretempora aut. Quam vitae modi numquam exercitationem error magni est aliquid! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste velit aliquam nemo odio non totam rem porro aspernatur praesentium minima ipsum, voluptatum commodi eius dolore.</p> 
           </div>
         </div>  
       </div>
