added music player

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       <link rel="icon" href="Logo.png" type="image/gif" sizes="16x16">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="./style.css">
+      <!-- <link rel="stylesheet" href="./music-player/music_player_style.css"> -->
+      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
       <title>Portfolio Demo</title>
   </head>
   <body>
@@ -53,12 +55,7 @@
                         <rect class="rect" y="34" width="19" height="12" rx="3"/>
                         <rect x="0.5" y="17.5" width="59" height="11" rx="1.5" stroke="black"/>
                         <rect class="rect" y="17" width="46" height="12" rx="3"/>
-                        </svg>
-                        
-                      <!-- <svg viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M45.9219 70.3125H36.4891C35.9101 70.3126 35.3516 70.0985 34.9212 69.7113C34.4907 69.3241 34.2188 68.7914 34.1578 68.2156L33.4594 61.6391C32.4844 61.3072 31.5318 60.9127 30.6078 60.4578L25.4687 64.6141C25.019 64.9763 24.4513 65.1598 23.8746 65.1292C23.2978 65.0986 22.7527 64.8562 22.3437 64.4484L15.6734 57.7781C15.2657 57.3692 15.0232 56.824 14.9927 56.2473C14.9621 55.6706 15.1455 55.1029 15.5078 54.6531L19.6656 49.5078C19.21 48.5839 18.8149 47.6314 18.4828 46.6563L11.8953 45.9531C11.3198 45.8922 10.7873 45.6205 10.4001 45.1904C10.013 44.7603 9.79868 44.2021 9.79843 43.6234V34.1891C9.79868 33.6104 10.013 33.0523 10.4001 32.6221C10.7873 32.192 11.3198 31.9203 11.8953 31.8594L18.4719 31.1609C18.8039 30.1858 19.199 29.2333 19.6547 28.3094L15.4969 23.1641C15.1346 22.7143 14.9512 22.1466 14.9817 21.5699C15.0123 20.9932 15.2547 20.448 15.6625 20.0391L22.3328 13.3688C22.7418 12.961 23.2869 12.7186 23.8636 12.688C24.4403 12.6574 25.008 12.8409 25.4578 13.2031L30.6031 17.3594C31.5272 16.9045 32.4797 16.5099 33.4547 16.1781L34.1531 9.60157C34.2131 9.02419 34.4852 8.48961 34.9168 8.10136C35.3483 7.71312 35.9086 7.49883 36.4891 7.5H45.9219C46.5008 7.49987 47.0593 7.71402 47.4898 8.10119C47.9202 8.48836 48.1921 9.02115 48.2531 9.59688L48.95 16.1734C49.9255 16.5053 50.8785 16.8998 51.8031 17.3547L56.9469 13.1984C57.3966 12.8362 57.9643 12.6527 58.5411 12.6833C59.1178 12.7139 59.6629 12.9563 60.0719 13.3641L66.7422 20.0344C67.15 20.4433 67.3924 20.9885 67.4229 21.5652C67.4535 22.1419 67.2701 22.7096 66.9078 23.1594L62.75 28.3047C63.205 29.2289 63.6001 30.1814 63.9328 31.1563L70.5094 31.8547C71.0846 31.916 71.6167 32.1879 72.0036 32.6179C72.3904 33.048 72.6045 33.6059 72.6047 34.1844V43.6188C72.6058 44.197 72.3931 44.7553 72.0074 45.1862C71.6218 45.6171 71.0905 45.8903 70.5156 45.9531L63.9391 46.6516C63.6063 47.6265 63.2112 48.5789 62.7562 49.5031L66.9141 54.6484C67.2763 55.0982 67.4598 55.6659 67.4292 56.2426C67.3986 56.8193 67.1562 57.3645 66.7484 57.7734L60.0781 64.4484C59.6692 64.8562 59.124 65.0986 58.5473 65.1292C57.9706 65.1598 57.4029 64.9763 56.9531 64.6141L51.8094 60.4578C50.8848 60.9127 49.9318 61.3073 48.9562 61.6391L48.2594 68.2156C48.1983 68.7924 47.9255 69.3261 47.4937 69.7134C47.0619 70.1007 46.5019 70.3142 45.9219 70.3125V70.3125ZM38.5937 65.625H43.8109L44.45 59.6C44.5001 59.1284 44.6922 58.6831 45.0007 58.323C45.3093 57.9628 45.7198 57.7047 46.1781 57.5828C47.829 57.1426 49.4138 56.4842 50.8906 55.625C51.3018 55.3854 51.7762 55.2767 52.2507 55.3132C52.7251 55.3498 53.1773 55.5299 53.5469 55.8297L58.2594 59.6375L61.9484 55.9484L58.1344 51.25C57.8346 50.8804 57.6545 50.4283 57.6179 49.9538C57.5814 49.4793 57.6901 49.0049 57.9297 48.5938C58.7871 47.1179 59.4434 45.5341 59.8812 43.8844C60.0033 43.4258 60.2616 43.0151 60.622 42.7066C60.9825 42.398 61.4281 42.2061 61.9 42.1563L67.9234 41.5156V36.2984L61.9 35.6578C61.4281 35.608 60.9825 35.4161 60.622 35.1075C60.2616 34.7989 60.0033 34.3882 59.8812 33.9297C59.4435 32.2794 58.7872 30.6951 57.9297 29.2188C57.6901 28.8076 57.5814 28.3332 57.6179 27.8587C57.6545 27.3842 57.8346 26.9321 58.1344 26.5625L61.9422 21.85L58.2531 18.1609L53.5406 21.9688C53.171 22.2685 52.7189 22.4486 52.2444 22.4852C51.7699 22.5218 51.2956 22.413 50.8844 22.1734C49.4082 21.3167 47.8245 20.6604 46.175 20.2219C45.7167 20.1 45.3061 19.8419 44.9976 19.4817C44.689 19.1216 44.497 18.6763 44.4469 18.2047L43.8141 12.1875H38.5937L37.9547 18.2125C37.9044 18.6843 37.7122 19.1297 37.4033 19.4899C37.0945 19.8501 36.6836 20.1081 36.225 20.2297C34.5767 20.6702 32.9945 21.3286 31.5203 22.1875C31.1091 22.4271 30.6348 22.5358 30.1603 22.4993C29.6858 22.4627 29.2337 22.2826 28.8641 21.9828L24.1562 18.1688L20.4687 21.8578L24.2781 26.5703C24.5776 26.9401 24.7575 27.3923 24.7938 27.8668C24.8301 28.3413 24.721 28.8155 24.4812 29.2266C23.6252 30.7031 22.9689 32.2867 22.5297 33.9359C22.4078 34.3943 22.1497 34.8048 21.7895 35.1134C21.4294 35.4219 20.9841 35.6139 20.5125 35.6641L14.4875 36.3047V41.5203L20.5125 42.1609C20.9841 42.2111 21.4294 42.4031 21.7895 42.7117C22.1497 43.0202 22.4078 43.4308 22.5297 43.8891C22.9688 45.5366 23.6245 47.1186 24.4797 48.5938C24.7195 49.0048 24.8285 49.4791 24.7922 49.9535C24.7559 50.428 24.5761 50.8802 24.2766 51.25L20.4687 55.9547L24.1578 59.6438L28.8719 55.8359C29.2415 55.5362 29.6936 55.3561 30.1681 55.3195C30.6426 55.2829 31.1169 55.3917 31.5281 55.6313C33.0036 56.4882 34.5869 57.1445 36.2359 57.5828C36.6945 57.7045 37.1054 57.9624 37.4143 58.3226C37.7231 58.6828 37.9154 59.1282 37.9656 59.6L38.5937 65.625Z" fill="black"/>
-                          <path d="M41.2047 53.1812C38.3814 53.1809 35.6217 52.3434 33.2743 50.7747C30.927 49.206 29.0976 46.9764 28.0174 44.368C26.9372 41.7595 26.6548 38.8893 27.2057 36.1204C27.7567 33.3514 29.1164 30.808 31.1129 28.8117C33.1093 26.8155 35.6529 25.4561 38.4219 24.9054C41.1909 24.3547 44.0611 24.6375 46.6694 25.718C49.2777 26.7985 51.5071 28.6282 53.0756 30.9756C54.6441 33.3231 55.4812 36.083 55.4812 38.9062C55.4771 42.6912 53.9716 46.3199 51.2951 48.9962C48.6186 51.6724 44.9897 53.1775 41.2047 53.1812V53.1812ZM41.2047 29.3187C39.3085 29.319 37.455 29.8816 35.8786 30.9353C34.3021 31.989 33.0735 33.4864 32.3481 35.2383C31.6227 36.9902 31.4331 38.9179 31.8032 40.7776C32.1733 42.6373 33.0865 44.3455 34.4274 45.6862C35.7683 47.0268 37.4766 47.9398 39.3364 48.3096C41.1961 48.6794 43.1238 48.4895 44.8756 47.7638C46.6274 47.0381 48.1247 45.8092 49.1781 44.2326C50.2315 42.656 50.7937 40.8024 50.7937 38.9062C50.7909 36.3641 49.7796 33.9269 47.9819 32.1295C46.1842 30.3321 43.7468 29.3212 41.2047 29.3187V29.3187Z" fill="black"/>
-                          </svg> -->
+                        </svg>       
                   </div></a></div>
                   <div class="nav-item" onclick="scrollToSection(work)"><a><div class="text">My Work</div><div class="icon">
                     <svg width="68" height="55" viewBox="0 0 68 55" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -68,14 +65,6 @@
                         <line x1="21.7609" y1="21.0518" x2="28.7609" y2="34.0518" stroke="#4B4B4B" stroke-width="4"/>
                         <line x1="12" y1="9" x2="51" y2="9" stroke="#4B4B4B" stroke-width="4"/>
                         </svg>              
-                    <!-- <svg viewBox="0 0 66 61" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M65.44 26.9H29.86V32.38H65.44V26.9Z" fill="black"/>
-                          <path d="M7.96 38.98L0.539999 31.56L4.42 27.7L7.96 31.24L16.98 22.22L20.84 26.1L7.96 38.98Z" fill="black"/>
-                          <path d="M65.44 5H29.86V10.48H65.44V5Z" fill="black"/>
-                          <path d="M7.96 17.08L0.539999 9.66L4.42 5.8L7.96 9.34L16.98 0.32L20.84 4.2L7.96 17.08Z" fill="black"/>
-                          <path d="M65.44 48.8H29.86V54.28H65.44V48.8Z" fill="black"/>
-                          <path d="M7.96 60.88L0.539999 53.48L4.42 49.6L7.96 53.14L16.98 44.12L20.84 48L7.96 60.88Z" fill="black"/>
-                          </svg> -->
                   </div></a></div>
                   <div class="nav-item" onclick="scrollToSection(contact)"><a><div class="text">Contact Me</div><div class="icon">
                       <svg viewBox="0 0 88 57" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -416,10 +405,67 @@
 
       <div class="section" id="work">
         <div class="slide-in">
-          <div class="slide">
+          <div class="slide work">
+
               <h1>My Work</h1>   
-              Coming soon ...    
-              <h2>Recent Work</h2>
+              <div class="work-container">
+                <div class="my-work">
+                    Coming soon ... 
+                </div>
+                <!-- My work ends here -->
+                <div class="recent-work">
+                    <h2>Recent Work</h2>
+                    <div class="wrapper active">
+                        <div class="top-bar">
+                          <i class="material-icons minimalize">expand_more</i>
+                          <span>Now Playing</span>
+                          <i class="material-icons">more_horiz</i>
+                        </div>
+                        <div class="img-area">
+                          <div class="dot"></div>
+                          <img src="" alt="">
+                        </div>
+                        <div class="song-details">
+                          <p class="name"></p>
+                          <p class="artist"></p>
+                        </div>
+                        <div class="progress-area">
+                          <div class="progress-bar">
+                            <audio id="main-audio" src=""></audio>
+                          </div>
+                          <div class="song-timer">
+                            <span class="current-time">0:00</span>
+                            <span class="max-duration">0:00</span>
+                          </div>
+                        </div>
+                        <div class="controls">
+                          <i id="repeat-plist" class="material-icons" title="Playlist looped">repeat</i>
+                          <i id="prev" class="material-icons">skip_previous</i>
+                          <div class="play-pause">
+                            <i class="material-icons play">play_arrow</i>
+                          </div>
+                          <i id="next" class="material-icons">skip_next</i>
+                          <i id="more-music" class="material-icons">queue_music</i>
+                        </div>
+                        <div class="music-list">
+                          <div class="header">
+                            <div class="row">
+                              <i class= "list material-icons">queue_music</i>
+                              <span>Music list</span>
+                            </div>
+                            <i id="close" class="material-icons">close</i>
+                          </div>
+                          <ul>
+                            <!-- here li list are coming from js -->
+                          </ul>
+                        </div>
+                      </div>
+                      <!-- Player end here -->
+                  </div>
+                  <!-- Recent Work ends here -->
+              </div>
+
+
           </div>
         </div>  
       </div>
@@ -529,5 +575,7 @@
       Copied to Clipboard
   </div>  
       <script src="./script.js"></script>
+      <script defer src="./music-player/music-player.js"></script>
+      <!-- <script defer src="./music-player/songs-list.js"></script> -->
   </body>
   </html>
