--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
       Copied to Clipboard
   </div>  
       <script src="./script.js"></script>
-      <script defer src="./music-player/music-player.js"></script>
+      <script src="./music-player/music-player.js"></script>
       <!-- <script defer src="./music-player/songs-list.js"></script> -->
   </body>
   </html>
