--- a/index.html
+++ b/index.html
@@ -410,7 +410,29 @@
               <h1>My Work</h1>   
               <div class="work-container">
                 <div class="my-work">
-                    Coming soon ... 
+                    <div class="work-btns">
+                        <div class="list-view-btn">
+                            <i class="material-icons">
+                                view_list
+                            </i>
+                        </div>
+                        <div class="grid-view-btn checked">
+                            <i class="material-icons">
+                                grid_view
+                            </i>
+                        </div>
+                    </div>
+
+                    <div class="my-work_card-container grid">
+                        <div class="my-work_card">1</div>
+                        <div class="my-work_card">2</div>
+                        <div class="my-work_card">3</div>
+                        <div class="my-work_card">4</div>
+                        <div class="my-work_card">5</div>
+                        <div class="my-work_card">6</div>
+                        <div class="my-work_card">7</div>
+                        <div class="my-work_card">8</div>
+                    </div>
                 </div>
                 <!-- My work ends here -->
                 <div class="recent-work">
