--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
       <div class="section" id="contact">
         <div class="slide-in">
             <div class="contact slide">
-                <h1>Contact Me</h1>
+                <span class="background-text">Contact Me</span>
                 <div class="contact-section">
                     <!-- <h1>Contact Me</h1> -->
                     <form onsubmit="event.preventDefault(); validateForm()" autocomplete="off">
