--- a/index.html
+++ b/index.html
@@ -424,14 +424,97 @@
                     </div>
 
                     <div class="my-work_card-container grid">
-                        <div class="my-work_card">1</div>
-                        <div class="my-work_card">2</div>
-                        <div class="my-work_card">3</div>
-                        <div class="my-work_card">4</div>
-                        <div class="my-work_card">5</div>
-                        <div class="my-work_card">6</div>
-                        <div class="my-work_card">7</div>
-                        <div class="my-work_card">8</div>
+                        <div class="my-work_card">
+                            <div class="flip-card-grid">
+                                <div class="flip-card-front">
+                                  <img src="https://picsum.photos/200/300" alt="Avatar" style="width:280px;height:320px;">
+                                </div>
+                                <div class="flip-card-back">
+                                    <h1>Project Name</h1>
+                                    <p>Languages used:</p>
+                                    <ul>
+                                        <li>HTML</li>
+                                        <li>CSS</li>
+                                        <li>JS</li>
+                                    </ul>
+                                    <p>See project on:</p>
+                                    <ul>
+                                        <li>Github</li>
+                                        <li>Codepen</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="my-work_card">
+                            <div class="flip-card-grid">
+                                <div class="flip-card-front">
+                                  <img src="https://picsum.photos/200/301" alt="Avatar" style="width:280px;height:320px;">
+                                </div>
+                                <div class="flip-card-back">
+                                    
+                                </div>
+                            </div>
+                        </div>
+                        <div class="my-work_card">
+                            <div class="flip-card-grid">
+                                <div class="flip-card-front">
+                                    <img src="https://picsum.photos/200/302" alt="Avatar" style="width:280px;height:320px;">
+                                </div>
+                                <div class="flip-card-back">
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="my-work_card">
+                            <div class="flip-card-grid">
+                                <div class="flip-card-front">
+                                    <img src="https://picsum.photos/200/303" alt="Avatar" style="width:280px;height:320px;">
+                                </div>
+                                <div class="flip-card-back">
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="my-work_card">
+                            <div class="flip-card-grid">
+                                <div class="flip-card-front">
+                                    <img src="https://picsum.photos/200/304" alt="Avatar" style="width:280px;height:320px;">
+                                </div>
+                                <div class="flip-card-back">
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="my-work_card">
+                            <div class="flip-card-grid">
+                                <div class="flip-card-front">
+                                    <img src="https://picsum.photos/200/305" alt="Avatar" style="width:280px;height:320px;">
+                                </div>
+                                <div class="flip-card-back">
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="my-work_card">
+                            <div class="flip-card-grid">
+                                <div class="flip-card-front">
+                                    <img src="https://picsum.photos/200/306" alt="Avatar" style="width:280px;height:320px;">
+                                </div>
+                                <div class="flip-card-back">
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="my-work_card">
+                            <div class="flip-card-grid">
+                                <div class="flip-card-front">
+                                    <img src="https://picsum.photos/200/307" alt="Avatar" style="width:280px;height:320px;">
+                                </div>
+                                <div class="flip-card-back">
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- My work ends here -->
