--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
           <div class="loading-text">
               LOADING
           </div>
-          <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+          <div class="circle__one">
+        </div>
+        <div class="circle__two">
+        </div>
+        <div class="circle__three">
+        </div>
       </div>
       <div class="navbar" id="navbar">
           <div class="logo">
