--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   </head>
   <body>
       <div class="preload preload-active" >
+            <div class="doors">
+                <div class="left-side"></div>
+            <div class="right-side"></div>
+            </div>
           <div class="loading-text">
               LOADING
           </div>
