--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="./style.css">
       <!-- <link rel="stylesheet" href="./music-player/music_player_style.css"> -->
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-      <title>Portfolio Demo</title>
+      <title>Portfolio Paweł Czarnecki</title>
   </head>
   <body>
       <div class="preload preload-active" >
