grid/list view button fix

--- a/index.html
+++ b/index.html
@@ -446,12 +446,12 @@
               <div class="work-container">
                 <div class="my-work">
                     <div class="work-btns">
-                        <div class="list-view-btn checked">
+                        <div class="list-view-btn">
                             <i class="material-icons">
                                 view_list
                             </i>
                         </div>
-                        <div class="grid-view-btn">
+                        <div class="grid-view-btn checked">
                             <i class="material-icons">
                                 grid_view
                             </i>
