current music playing animation

--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                 <!-- My work ends here -->
                 <div class="recent-work">
                     <h2>Recent Work</h2>
-                    <div class="wrapper active minimalized">
+                    <div class="wrapper active">
                         <div class="top-bar">
                           <i class="material-icons minimalize">expand_more</i>
                           <span>Now Playing</span>
@@ -648,7 +648,7 @@
                           <i id="next" class="material-icons">skip_next</i>
                           <i id="more-music" class="material-icons">queue_music</i>
                         </div>
-                        <div class="music-list">
+                        <div class="music-list show">
                           <div class="header">
                             <div class="row">
                               <i class= "list material-icons">queue_music</i>
