music player images swap

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 <p>For all of my projects visit my Codepen profile or Github respositories</p>
                 <p>Below you can download my CV by clicking on button</p>
             <a href="./test.pdf" class="download" download>
-                My CV 
+                Download 
                 <span class="material-icons">
                 file_download
                 </span>
