--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
                 <span class="background-text">Contact Me</span>
                 <div class="contact-section">
                     <!-- Contact Me Form -->
-                    <form onsubmit="event.preventDefault(); validateForm()" autocomplete="off">
+                    <form onsubmit="event.preventDefault(); validateForm()" novalidate autocomplete="off">
             
                         <label for="name">Name: </label>
                         <input type="text" name="name" id="name">
