--- a/index.html
+++ b/index.html
@@ -710,6 +710,9 @@
                                     <li>email@subdomain.example.com</li>
                                     <li>1234567890@example.com</li>
                                 </ul>
+
+                                <h3>Copy to clipboard isn't working? Here is my email</h3>
+                                <p>pawelczarnecki0225@gmail.com</p>
                             </div>
                         </div>
                         
