lazy load images

--- a/index.html
+++ b/index.html
@@ -384,44 +384,83 @@
                       <div id="slideRight" class="slide-button">&rarr;</div>
                 
                       <div class="horizontal-scroller snaps-inline" id="scroll-horizontally">
-                          <div class="skill">
-                              <img src="./skill-images/html.png" loading="lazy" alt="HTML">
+                          <div class="skill loading">
+                              <div class="img-loader">
+                                  LOADING
+                              </div>
+                              <img src="./skill-images/html.png" loading="lazy" alt="HTML" onload="consoleLogLoad()">
                               <p class="description">HTML</p>
                           </div>
-                          <div class="skill">
-                              <img src="./skill-images/css.png" loading="lazy" alt="CSS">
+                          <div class="skill loading">
+                            <div class="img-loader">
+                                LOADING
+
+                            </div>
+                              <img src="./skill-images/css.png" loading="lazy" alt="CSS" onload="consoleLogLoad()">
                               <p class="description">CSS</p>
                           </div>
-                          <div class="skill">
-                            <img src="./skill-images/js.png" loading="lazy" alt="JS">
+                          <div class="skill loading">
+                            <div class="img-loader">
+                                LOADING
+
+                            </div>
+                            <img src="./skill-images/js.png" loading="lazy" alt="JS" onload="consoleLogLoad()">
                             <p class="description">JavaScript</p>
                         </div>
-                        <div class="skill">
-                            <img src="./skill-images/sass.png" loading="lazy" alt="SCSS">
+                        <div class="skill loading">
+                            <div class="img-loader">
+                                LOADING
+
+                            </div>
+                            <img src="./skill-images/sass.png" loading="lazy" alt="SCSS" onload="consoleLogLoad()">
                             <p class="description">SCSS</p>
                         </div>
-                        <div class="skill">
-                            <img src="./skill-images/react.png" loading="lazy" alt="React">
+                        <div class="skill loading">
+                            <div class="img-loader">
+                                LOADING
+
+                            </div>
+                            <img src="./skill-images/react.png" loading="lazy" alt="React" onload="consoleLogLoad()">
                             <p class="description">React</p>
                         </div>
-                        <div class="skill">
-                            <img src="./skill-images/git.png" loading="lazy" alt="Git">
+                        <div class="skill loading">
+                            <div class="img-loader">
+                                LOADING
+
+                            </div>
+                            <img src="./skill-images/git.png" loading="lazy" alt="Git" onload="consoleLogLoad()">
                             <p class="description">Git</p>
                         </div>
-                        <div class="skill">
-                            <img src="./skill-images/stack-overflow.png" loading="lazy" alt="stackoverflow">
+                        <div class="skill loading">
+                            <div class="img-loader">
+                                LOADING
+
+                            </div>
+                            <img src="./skill-images/stack-overflow.png" loading="lazy" alt="stackoverflow"onload="consoleLogLoad()">
                             <p class="description">stack<strong>overflow</strong></p>
                         </div>
-                        <div class="skill">
-                            <img src="./skill-images/figma.png" loading="lazy" alt="Figma">
+                        <div class="skill loading">
+                            <div class="img-loader">
+                                LOADING
+
+                            </div>
+                            <img src="./skill-images/figma.png" loading="lazy" alt="Figma" onload="consoleLogLoad()">
                             <p class="description">Figma</p>
                         </div>
-                        <div class="skill">
-                            <img src="./skill-images/davinci.png" loading="lazy" alt="davinci resolve">
+                        <div class="skill loading">
+                            <div class="img-loader">
+                                LOADING
+
+                            </div>
+                            <img src="./skill-images/davinci.png" loading="lazy" alt="davinci resolve" onload="consoleLogLoad()">
                             <p class="description">DaVinci Resolve</p>
                         </div>
-                        <div class="skill">
-                            <img src="./skill-images/photoshop.png" loading="lazy" alt="Photoshop">
+                        <div class="skill loading">
+                            <div class="img-loader">
+                                LOADING
+
+                            </div>
+                            <img src="./skill-images/photoshop.png" loading="lazy" alt="Photoshop" onload="consoleLogLoad()">
                             <p class="description">Photoshop</p>
                         </div>
                       </div>
