--- a/index.html
+++ b/index.html
@@ -891,6 +891,7 @@
       Copied to Clipboard
   </div>  
       <script src="./script.js"></script>
+      <script src="https://smtpjs.com/v3/smtp.js"></script>
       <script src="./music-player/music-player.js"></script>
   </body>
   </html>
